--- a/exercise-3/index.html
+++ b/exercise-3/index.html
@@ -19,6 +19,7 @@
         <label for="amount">How many patties would you like?</label>
         <br>
         <!--说明：在此添加一个input for 'amount'，type 为number -->
+        <input type="number" name="amount" id="amount">
 
     </section>
 
@@ -26,19 +27,23 @@
         <label for="doneness">How do you want your patty cooked</label>
         <br>
         <!--说明：在此添加一个input for 'doneness'，type: range, default value: 3, min: 0, max: 5, step: 1  -->
-
+        Rare<input type="range" value="3" min="0" max="5" step="1" name="doneness" id="doneness">Well-Done
     </section>
 
     <section class="toppings">
         <span>What toppings would you like?</span>
         <br>
         <!--说明：在此添加一个checkbox, name: topping, value: lettuce, id: lettuce -->
+        <input type="checkbox" name="topping" value="lettuce" id="lettuce">
 
         <!--说明：在此添加一个label for 'lettuce', content: Lettuce -->
+        <label for="lettuce" >Lettuce</label>
 
         <!--说明：在此添加一个checkbox, name: topping, value: tomato, id: tomato -->
+        <input type="checkbox" name="topping" value="tomato" id="tomato">
 
         <!--说明：在此添加一个label for 'tomato', content: Tomato-->
+        <label for="tomato">Tomato</label>
 
         <input type="checkbox" name="topping" id="onion" value="onion">
         <label for="onion">Onion</label>
@@ -48,8 +53,10 @@
         <span>Would you like to add cheese?</span>
         <br>
         <!--说明：在此添加一个radio, name: cheese, value: yes, id: yes -->
+        <input type="radio" name="cheese" id="yes" value="yes">
 
         <!--说明：在此添加一个label for 'yes' -->
+        <label for="yes">Yes</label>
 
         <input type="radio" name="cheese" id="no" value="yes">
         <label for="no">No</label>
@@ -59,6 +66,11 @@
         <label for="bun">What type of bun would you like?</label>
         <br>
         <!--说明：在此添加一个select, name: bun, option list: sesame, potato, Salad-->
+        <select name="bun" id="bun">
+            <option value="sesame">sesame</option>
+            <option value="potato">potato</option>
+            <option value="salad">salad</option>
+        </select>
 
     </section>
 
@@ -68,6 +80,11 @@
         <input list="sauces" id="sauce" name="sauce">
 
         <!--说明：在此添加一个datalist, option list: ketchup, mayo, Other-->
+        <datalist id="sauces" >
+            <option value="ketchup">ketchup</option>
+            <option value="mayo">mayo</option>
+            <option value="Other">Other</option>
+        </datalist>
 
     </section>
 
@@ -75,11 +92,13 @@
         <label for="extra">Anything else you want to add?</label>
         <br>
         <!--说明：在此添加一个textarea, name:extra, rows: 3, cols:50-->
+        <textarea name="extra" id="extra" cols="50" rows="3"></textarea>
 
     </section>
 
     <section class="submission">
         <!--说明：在此添加一个input, type: submit, value: Submit -->
+        <input type="button" value="Submit" name="submission" id="submission">
 
     </section>
 </form>
