--- a/exercise-4/none-semantic.html
+++ b/exercise-4/none-semantic.html
@@ -17,6 +17,12 @@
         </ul>
     </div>
 
+    <article>
+        <h2>here is a article title</h2>
+        <p>
+            here is a article content ...
+        </p>
+    </article >
     <div id="main"><!-- 网页主体内容 -->
         <div id="section">
             <div id="article"><!-- 此处包含一个 article（一篇文章），内容略…… -->
@@ -25,6 +31,14 @@
                     here is a article content ...
                 </p>
             </div>
+
+            <aside>
+                <h2>additional information</h2>
+                <nav>
+                    <li><a href="#">additional link</a></li>
+                </nav>
+
+            </aside>
             <div id="aside"><!-- 侧边栏在主内容右侧 -->
                 <h2>additional information</h2>
                 <ul>
