--- a/exercise-4/index.html
+++ b/exercise-4/index.html
@@ -7,8 +7,29 @@
 </head>
 
 <body>
-
     <!-- 请将本目录下的none-semantic.html 内容改写成semantic html-->
-
+    <header>
+        <h1>Navigational Links</h1>
+    </header>
+    <nav>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#posts">Posts</a></li>
+        <li><a href="#contact">Contact</a></li>
+    </nav>
+    <article>
+        <h2>here is a article title</h2>
+        <p>
+            here is a article content ...
+        </p>
+    </article >
+    <aside>
+        <h2>additional information</h2>
+        <nav>
+            <li><a href="#">additional link</a></li>
+        </nav>
+    </aside>
+    <footer>
+        <p>©ThoughtWorks 2020</p>
+    </footer>
 </body>
 </html>
